--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <button>START/RESTART</button>
   </div>
   
+  <script src="words.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
