--- a/index.html
+++ b/index.html
@@ -15,18 +15,12 @@
     <div id="options"></div>
     <div id="feedback"></div>
     <div class="score">Score: <span id="score">0</span></div>
-    <button id="next-btn" onclick="nextWord()">Next Word</button>
   </div>
-  <div class="game-over-container" style="display:none">
-    <button id="gameover-restart-btn" onclick="startGame()">Restart</button>
-  </div>
-  <div class="main-container">
-    <button id="start-btn" onclick="startGame()">Start</button>
-  </div>
+
   <div id="menu">
-    <button>START/RESTART</button>
+    <button id="start-btn" onclick="startGame()">START/RESTART</button>
   </div>
-  
+
   <script src="words.js"></script>
   <script src="script.js"></script>
 </body>
