--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="game-container" style="display:none">
     <div id="word-display">こんにちは</div>
     <div id="options"></div>
-    <div id="feedback"></div>
+    <div><button id="next">Next</button></div>
     <div class="score">Score: <span id="score">0</span></div>
   </div>
 
